syntax = "proto3";
package yars_grpc;

service Yars {
    rpc IndexDirectory (IndexRequest) returns (IndexReply);
    rpc IndexingStatus (StatusRequest) returns (StatusReply);
    rpc SearchDirectory (SearchRequest) returns (SearchReply);
}

message IndexRequest {
    string path = 1;
}

message IndexReply {
    int32 code = 1;
    string status = 2;
}

message StatusRequest {
    string path = 1;
}

message StatusReply {
    string status = 1;
    int32 outstanding = 2;
}

message SearchRequest {
    string path = 1;
    string query = 2;
    int32 n = 3;
}

message SearchResultReply {
    int32 id = 1;
    string path = 2;
    int32 start_byte = 3;
    int32 end_byte = 4;
  }

message SearchReply {
    int32 code = 1;
    string message = 2;
    repeated SearchResultReply result = 3;
}
